--- a/SlotMachine/Base.lproj/Main.storyboard
+++ b/SlotMachine/Base.lproj/Main.storyboard
@@ -29,6 +29,9 @@
                                     <color key="baseForegroundColor" systemColor="systemGroupedBackgroundColor"/>
                                     <color key="baseBackgroundColor" red="1" green="0.72156862745098038" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="ShowHideJackPot:" destination="BV1-FR-VrT" eventType="touchUpInside" id="RHn-ue-qhI"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7c-OB-TKI">
                                 <rect key="frame" x="106.66666666666669" y="568" width="180" height="50"/>
@@ -47,7 +50,7 @@
                                 </buttonConfiguration>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z3J-M7-exN">
-                                <rect key="frame" x="116.66666666666669" y="286" width="40" height="40"/>
+                                <rect key="frame" x="116.66666666666669" y="270" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="cgO-Az-nXC"/>
                                     <constraint firstAttribute="height" constant="40" id="thL-g8-9AM"/>
@@ -74,7 +77,7 @@
                                 </buttonConfiguration>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lag-v6-qHb">
-                                <rect key="frame" x="169.33333333333334" y="287.66666666666669" width="54.666666666666657" height="36.666666666666686"/>
+                                <rect key="frame" x="169.33333333333334" y="271.66666666666669" width="54.666666666666657" height="36.666666666666686"/>
                                 <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="28"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -95,9 +98,8 @@
                                 <size key="shadowOffset" width="2" height="-1"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Woz-xn-57y">
-                                <rect key="frame" x="236.66666666666663" y="286" width="40" height="40"/>
+                                <rect key="frame" x="236.66666666666663" y="270" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="Pug-qs-fUZ"/>
                                     <constraint firstAttribute="height" constant="40" id="TtL-w0-UgW"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
@@ -110,27 +112,49 @@
                                     <color key="baseBackgroundColor" red="0.93725490199999995" green="0.054901960780000002" blue="0.85098039219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
                             </button>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jackpot" translatesAutoresizingMaskIntoConstraints="NO" id="jDn-xx-RMS">
+                                <rect key="frame" x="-3.6666666666666572" y="326" width="400.33333333333326" height="340"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="340" id="n6B-fr-PvD"/>
+                                    <constraint firstAttribute="width" constant="400" id="nxX-RJ-25L"/>
+                                </constraints>
+                            </imageView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$10 000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qMH-xf-BAu">
+                                <rect key="frame" x="64" y="540" width="265.33333333333331" height="92"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="70"/>
+                                <color key="textColor" red="1" green="0.72156862749999995" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <size key="shadowOffset" width="2" height="-1"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
-                        <color key="backgroundColor" systemColor="separatorColor"/>
+                        <color key="backgroundColor" red="0.44694149490000001" green="0.088004700840000005" blue="0.43139505389999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="tintColor" red="0.44694149490000001" green="0.088004700840000005" blue="0.43139505389999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="T7c-OB-TKI" secondAttribute="bottom" constant="200" id="BG3-vl-ms5"/>
+                            <constraint firstItem="qMH-xf-BAu" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="CBO-z9-70F"/>
                             <constraint firstItem="T7c-OB-TKI" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="EvW-F2-DOi"/>
                             <constraint firstItem="StT-rQ-zDq" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="30" id="K6R-k2-str"/>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="DJb-6w-3Un" secondAttribute="trailing" constant="30" id="L3c-JC-inx"/>
                             <constraint firstItem="Qzq-qO-c4U" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" constant="-250" id="LLl-vc-2aC"/>
                             <constraint firstItem="z3J-M7-exN" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" constant="-60" id="PgX-zo-fqK"/>
+                            <constraint firstItem="jDn-xx-RMS" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="RB8-Aa-Scw"/>
                             <constraint firstItem="lag-v6-qHb" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="Wbr-jf-uey"/>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="StT-rQ-zDq" secondAttribute="bottom" constant="30" id="aak-LL-L9n"/>
-                            <constraint firstItem="Woz-xn-57y" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" constant="-120" id="eyi-ai-pS2"/>
+                            <constraint firstItem="qMH-xf-BAu" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" constant="160" id="bsb-RR-bQL"/>
+                            <constraint firstItem="Woz-xn-57y" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" constant="-136" id="eyi-ai-pS2"/>
                             <constraint firstItem="Qzq-qO-c4U" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="iq8-Gn-JXs"/>
-                            <constraint firstItem="lag-v6-qHb" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" constant="-120" id="sbC-hW-L9p"/>
+                            <constraint firstItem="jDn-xx-RMS" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" constant="70" id="r1d-ln-j7X"/>
+                            <constraint firstItem="lag-v6-qHb" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" constant="-136" id="sbC-hW-L9p"/>
                             <constraint firstItem="Woz-xn-57y" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" constant="60" id="ucQ-BN-scC"/>
-                            <constraint firstItem="z3J-M7-exN" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" constant="-120" id="vNG-be-1fM"/>
+                            <constraint firstItem="z3J-M7-exN" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" constant="-136" id="vNG-be-1fM"/>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="DJb-6w-3Un" secondAttribute="bottom" constant="30" id="yTC-6w-88t"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="JackPotAmmount" destination="qMH-xf-BAu" id="as7-ej-bzV"/>
+                        <outlet property="JackPotImage" destination="jDn-xx-RMS" id="PM6-Vh-SRP"/>
                         <outlet property="SpinButton" destination="T7c-OB-TKI" id="t23-6a-MQj"/>
                         <outlet property="TotalAmmount" destination="Qzq-qO-c4U" id="ETt-rO-kNa"/>
                     </connections>
@@ -141,9 +165,7 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="separatorColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="jackpot" width="590" height="489"/>
         <systemColor name="systemGroupedBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
